--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark container" style="padding: 8px 0; width: 1116px;">
         <div class="container-fluid mx-4">
           <a class="navbar-brand" href="index.html">
-            <img src="img/Picture1.png" alt=""> Ahsan's Shop  
+            <img src="img/Picture1.png" alt=""> 
+              Ahsan's Shop  
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
